<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_ui_white">

    <RelativeLayout
        android:id="@+id/rel_titlebar"
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <ImageView
            android:id="@+id/iv_eduai_close_forscreenpage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="30dp"
            android:paddingRight="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ea_forscreen_back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_eduai_close_forscreenpage"
            android:text="@string/forscreen_page_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="78dp"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_titlebar"
        android:scaleType="fitXY"
        android:src="@drawable/forscreenbackground" />

    <TextView
        android:id="@+id/tv_eduai_forscreen_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_eduai_forscreen_code"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/forscreen_dec"
        android:textColor="@color/eduai_color_text_color"
        android:textSize="36sp" />


    <TextView
        android:id="@+id/tv_eduai_network_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_eduai_forscreen_dec"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/forscreen_net_error_tips"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_eduai_retry_btn"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tv_eduai_network_tips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/eduai_forscreen_bg_address"
        android:gravity="center"
        android:onClick="check"
        android:text="@string/forscreen_retry"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pb_eduai_checknetwork_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_eduai_forscreen_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="6220 0188 90"
        android:textColor="@color/eduai_color_forscreen_code"
        android:textSize="70sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/center_flag"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />


    <TextView
        android:id="@+id/tv_temp_complete_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="1adfadf"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rel_eduai_forscreen_step"
        android:layout_marginRight="90dp"
        android:layout_toLeftOf="@+id/rel_eduai_forscreen_step">

        <TextView
            android:id="@+id/tv_eduai_forscreen_step_one"
            style="@style/eduai_forscreen_step_text_style"
            android:text="1" />

        <TextView
            style="@style/eduai_forscreen_step_text_content_style"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_eduai_forscreen_step_one"
            android:text="@string/forscreen_step_one" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_eduai_forscreen_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp">

        <TextView
            android:id="@+id/tv_eduai_forscreen_step_two"
            style="@style/eduai_forscreen_step_text_style"
            android:text="2" />

        <TextView
            style="@style/eduai_forscreen_step_text_content_style"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_eduai_forscreen_step_two"
            android:text="@string/forscreen_step_two" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/rel_eduai_forscreen_step"
        android:layout_marginLeft="90dp"
        android:layout_toRightOf="@+id/rel_eduai_forscreen_step">

        <TextView
            android:id="@+id/tv_eduai_forscreen_step_three"
            style="@style/eduai_forscreen_step_text_style"
            android:text="3" />

        <TextView
            style="@style/eduai_forscreen_step_text_content_style"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_eduai_forscreen_step_three"
            android:text="@string/forscreen_step_three" />

    </RelativeLayout>


</RelativeLayout>
